<IM Study Project> 2024-09-24
Add function to create new uesr.

Error: 1
 - the second string queried from swagger always NULL
